# project_chas_url

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
chas_url/: checking_for_urls.py  cli.py  formatter.py  url_poll.py  validator.py
chas_url/scripts/: start_chas_url.py
tests/: test_chas_url.py
tests/fixtures/: expected_dics.py
