[tool.poetry]
name = "ChaS_URL"
version = "0.1.0"
description = "Checking strings for URLs"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "chas_url" },
]

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-import-order = "^0.18.2"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chas_url = "chas_url.scripts.start_chas_url:main"